--- a/gloop/dil/templates/dil/base.html
+++ b/gloop/dil/templates/dil/base.html
@@ -80,6 +80,8 @@
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="{{ STATIC_URL }}bootstrap/js/bootstrap.js"></script>
+    <script src="{{ STATIC_URL }}dx/jquery.dajax.core.js"></script>
+    <script src="{{ STATIC_URL }}dx/jquery.ba-serializeobject.js"></script>
   </body>
 </html>
 
