--- a/gloop/dil/templates/dil/profile.html
+++ b/gloop/dil/templates/dil/profile.html
@@ -12,48 +12,50 @@
       <b> Address: </b> {{ company.c_address }} </br>
       <b> Telephone: </b> {{ company.c_telephone }} </br>
 
-      <h2> Services {% if user == company.base %} <a href="#" id="add_s"> Add </a> {% endif %} </h2>
+      <h2> Services {% if user == company.base %} <a id="add_s" onclick="load_form_js();">Add</a> {% endif %} </h2>
 
       {% if user == company.base %}
-      <div id="add_s" style="display:none;">
-        <form class="well" action="" method="post">{% csrf_token %}
-          {{ form.as_p }}
-          <input type="submit" value="Save" />
+      <div id="add_s" class="well" style="display:none">
+        <form action="" method="post" id="add_form" accept-charset="utf-8">{% csrf_token %}
+          <legend> Add service </legend>
+	  {{ form.as_p }}
+	  <p><input type="button" value="Send" onclick="send_add();"></p>
         </form>
       </div>
       {% endif %}
-
-      {% for s in services %}
-      <div class="well" id="id_{{s}}"> 
-        {{ s }} <a id="edit_{{ s }}"> Edit </a> <a href="#" id="remove_{{ s }}"> Remove </a>
-        
-        <div id="edit_{{ s }}" style="display:none;">
-          <form action="" method="post">{% csrf_token %}
-            {{ form.as_p }}
-            <input type="submit" value="Save" />
-          </form>
+      <div class="control-group">
+        <div class="controls">
+        {% for s in services %}
+          <div class="well" id="id_{{s}}">
+            <label class="radio">
+            <input type="radio" name="ServicesRadios" id="{{ s }}_radio" value="{{ s }}" uncheked>
+            <p>Name: <input type="text" value="{{ s }}" id="title" onclick="toggle_editor();" style="border: 0px"></p>
+            <p><span class="label label-inverse">Duration:</span> {{ s.s_duration }} </p>
+            <p><span class="label label-inverse">Prize:</span> {{ s.s_price }} </p>
+            <a onclick="remove_service_js('{{s}}');"> remove </a>
+            </label>
+          </div>
+        {% endfor %}
         </div>
       </div>
-      {% endfor %}
-
     </div>
     
     <div class="span8">
       <h2> Calendar: </h2>
       <div class="btn-group">
-        <button class="btn" onclick="Dajaxice.dil.aPrev(aCalendar_callback, { 'date' : '{{ week_days.0 }}' });" id="prev_btn">Previous</button>
-        <button class="btn" onclick="Dajaxice.dil.aNext(aCalendar_callback, { 'date' : '{{ week_days.6 }}' });" id="next_btn">Next</button>
+        <button class="btn" onclick="change_week('-')" id="prev_btn">Previous</button>
+        <button class="btn" onclick="change_week('+')" id="next_btn">Next</button>
       </div>
       <table class="table">
         <thead>
           <tr>
-           <th> Monday </br><div id="monday"> {{ week_days.0 }} </div></th>
-           <th> Tuesday </br><div id="tuesday"> {{ week_days.1 }} </div></th>
-           <th> Wednesday </br><div id="wednesday"> {{ week_days.2 }} </div></th>
-           <th> Thursday </br><div id="thursday"> {{ week_days.3 }} </div></th>
-           <th> Friday </br><div id="friday"> {{ week_days.4 }} </div></th>
-           <th> Saturday </br><div id="saturday"> {{ week_days.5 }} </div></th>
-           <th> Sunday </br><div id="sunday"> {{ week_days.6 }} </div></th>
+           <th> Monday </br><span class="label" id="monday" > {{ week_days.0 }} </span></th>
+           <th> Tuesday </br><span class="label" id="tuesday"> {{ week_days.1 }} </span></th>
+           <th> Wednesday </br><span class="label" id="wednesday"> {{ week_days.2 }} </span></th>
+           <th> Thursday </br><span class="label" id="thursday"> {{ week_days.3 }} </span></th>
+           <th> Friday </br><span class="label" id="friday"> {{ week_days.4 }} </span></th>
+           <th> Saturday </br><span class="label" id="saturday"> {{ week_days.5 }} </span></th>
+           <th> Sunday </br><span class="label" id="sunday"> {{ week_days.6 }} </span></th>
           </tr>
         </thead>
         <tbody>
@@ -64,59 +66,52 @@
   </div> <!-- row -- >
 </div> <!-- container -->
     <script type="text/javascript" charset="utf-8">
-      function aCalendar_callback(data){
-        $(document).ready(function(){
-           var prev_str = "Dajaxice.dil.aPrev(aCalendar_callback, { \'date\' : \'" + data.monday + "\' })";
-           var next_str = "Dajaxice.dil.aNext(aCalendar_callback, { \'date\' : \'" + data.sunday + "\' })";
-           $("button#next_btn").attr("onclick", next_str);
-           $("button#prev_btn").attr("onclick", prev_str);
-           $("div#monday").html(data.monday);
-           $("div#tuesday").html(data.tuesday);
-           $("div#wednesday").html(data.wednesday);
-           $("div#thursday").html(data.thursday);
-           $("div#friday").html(data.friday);
-           $("div#saturday").html(data.saturday);
-           $("div#sunday").html(data.sunday);
-          });
+      function change_week(sign){
+        if (sign == '-') {
+          Dajaxice.dil.change_week_cb(Dajax.process,{ 'date' : $('span.label#monday').text(), 'sign' : sign });
+        }
+        if (sign == '+') {
+          Dajaxice.dil.change_week_cb(Dajax.process,{ 'date' : $('span.label#sunday').text(), 'sign' : sign }); 
+        }
       }
-      {% if user == company.base %}
-
-      $(document).ready(function(){
-        // code for handling new service
-        $("a#add_s").click(function(){
-          $("div#add_s input#id_service_action").attr("value","new");
-          $("div#add_s input#id_service_name").attr("value","");
-          $("div#add_s input#id_service_prize").attr("value","");
-          $("div#add_s input#id_service_duration").attr("value","");
-          $("div#add_s").slideToggle("slow", function(){
-            $("a#add_s").html( ($("a#add_s").html() == "Hide") ? "Add" : "Hide" );
-          });
-        });
-
-        // code for editing existing services
-        {% for s in services %}
-        $("a#edit_{{ s }}").click(function(){
-          $("div#edit_{{ s }} input#id_service_action").attr("value","edit_{{ s.s_name }}");
-          $("div#edit_{{ s }} input#id_service_name").attr("value","{{ s.s_name }}");
-          $("div#edit_{{ s }} input#id_service_prize").attr("value","");
-          $("div#edit_{{ s }} input#id_service_duration").attr("value","{{ s.s_duration }}");
-          $("div#edit_{{ s }}").slideToggle("slow");
-        });
-        $("a#remove_{{ s }}").click(function(){
-          var answer = confirm("Are you sure you want to delete this service?");
-          if (answer){          
-            $("div#id_{{ s }}").slideToggle("slow");
-            $("div#id_{{ s }}").html("");
+      function send_add(){
+        data = $('#add_form').serializeObject(true);
+        Dajaxice.dil.add_service(Dajax.process, {'form':data});
+      }
+      function load_form_js(){
+        $('div#add_s').slideToggle("slow", function(){
+          if ($('a#add_s').text() == "Add") {
+            $('a#add_s').html("Hide");
           }
+          else {
+            $('a#add_s').html("Add");
+          }        
         });
+      }
+      function remove_service_js(service){
+        Dajaxice.dil.remove_service(Dajax.process, {'service':service});
+      }
+      
+function toggle_editor(){
+	if(!$('title').hasClassName('editing')){
+		$('title').addClassName('editing');
+		$('title').select();
+		$('tools').show();
+	}
+}
 
-        {% endfor %}
+function cancel_edit(){
+	$('tools').hide();
+	$('title').removeClassName('editing');
+	$('title').blur();
+}
 
+function save(){
+  new_title = $('title').value;
+  $('title').value = "saving...";
+  Dajaxice.examples.flickr_save(Dajax.process,{'new_title':new_title});
 
-      });
-
-
-      {% endif %}
+}
     </script>
 
 {% endblock %}
